git subrepo pull swim-system-java
subrepo:
  subdir:   "swim-system-java"
  merged:   "b28724db"
upstream:
  origin:   "git@github.com:swimos/swim-system-java.git"
  branch:   "master"
  commit:   "b28724db"
git-subrepo:
  version:  "0.4.3"
  origin:   "???"
  commit:   "???"